# libgeom

./: .clang-format  .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/include/geom/: algorithms.hpp  geom.hpp  polygon.hpp  vector.hpp
tests/: CMakeLists.txt
tests/polygon/: CMakeLists.txt  polygons.cpp
tests/rview/: CMakeLists.txt  rview.cpp
tests/vectors/: CMakeLists.txt  vectors.cpp
